tests/snapshots/r#mod__simulation_test__listing_0043_immediate_movs-3.snap
---
source: tests/simulation_test.rs
expression: flag_register_store.flag_register_memory_map()
---
[
    (
        "carry",
        false,
    ),
    (
        "parity",
        false,
    ),
    (
        "auxiliaryCarry",
        false,
    ),
    (
        "zero",
        false,
    ),
    (
        "sign",
        false,
    ),
    (
        "trap",
        false,
    ),
    (
        "interrupt",
        false,
    ),
    (
        "direction",
        false,
    ),
    (
        "overflow",
        false,
    ),
]
