tests/snapshots/r#mod__simulation_test__listing_0043_immediate_movs.snap
---
source: tests/simulation_test.rs
expression: register_store.register_memory_map()
---
[
    (
        "ax",
        1,
    ),
    (
        "bx",
        2,
    ),
    (
        "cx",
        3,
    ),
    (
        "dx",
        4,
    ),
    (
        "sp",
        5,
    ),
    (
        "bp",
        6,
    ),
    (
        "si",
        7,
    ),
    (
        "di",
        8,
    ),
]
