tests/snapshots/r#mod__simulation_test__listing_0044_register_movs-3.snap
---
source: tests/simulation_test.rs
expression: store.segment_register_store().segment_register_memory_map()
---
[
    (
        "es",
        0,
    ),
    (
        "cs",
        0,
    ),
    (
        "ss",
        0,
    ),
    (
        "ds",
        0,
    ),
]
