tests/snapshots/r#mod__simulation_test__listing_0044_register_movs.snap
---
source: tests/simulation_test.rs
expression: register_store.register_memory_map()
---
[
    (
        "ax",
        4,
    ),
    (
        "bx",
        3,
    ),
    (
        "cx",
        2,
    ),
    (
        "dx",
        1,
    ),
    (
        "sp",
        1,
    ),
    (
        "bp",
        2,
    ),
    (
        "si",
        3,
    ),
    (
        "di",
        4,
    ),
]
