tests/snapshots/r#mod__simulation_test__listing_0045_challenge_register_movs-3.snap
---
source: tests/simulation_test.rs
expression: store.segment_register_store().segment_register_memory_map()
---
[
    (
        "es",
        26231,
    ),
    (
        "cs",
        0,
    ),
    (
        "ss",
        17425,
    ),
    (
        "ds",
        13124,
    ),
]
