tests/snapshots/r#mod__simulation_test__listing_0046_add_sub_cmp-3.snap
---
source: tests/simulation_test.rs
expression: flag_register_store.flag_register_memory_map()
---
[
    (
        "carry",
        false,
    ),
    (
        "parity",
        true,
    ),
    (
        "auxiliaryCarry",
        false,
    ),
    (
        "zero",
        true,
    ),
    (
        "sign",
        false,
    ),
    (
        "trap",
        false,
    ),
    (
        "interrupt",
        false,
    ),
    (
        "direction",
        false,
    ),
    (
        "overflow",
        false,
    ),
]
