tests/snapshots/r#mod__simulation_test__listing_0046_add_sub_cmp.snap
---
source: tests/simulation_test.rs
expression: register_store.register_memory_map()
---
[
    (
        "ax",
        0,
    ),
    (
        "bx",
        -7934,
    ),
    (
        "cx",
        3841,
    ),
    (
        "dx",
        0,
    ),
    (
        "sp",
        998,
    ),
    (
        "bp",
        0,
    ),
    (
        "si",
        0,
    ),
    (
        "di",
        0,
    ),
]
