tests/snapshots/r#mod__simulation_test__listing_0047_challenge_flags-2.snap
---
source: tests/simulation_test.rs
expression: segment_register_store.segment_register_memory_map()
---
[
    (
        "es",
        0,
    ),
    (
        "cs",
        0,
    ),
    (
        "ss",
        0,
    ),
    (
        "ds",
        0,
    ),
]
