tests/snapshots/r#mod__simulation_test__listing_0047_challenge_flags-3.snap
---
source: tests/simulation_test.rs
expression: flag_register_store.flag_register_memory_map()
---
[
    (
        "carry",
        true,
    ),
    (
        "parity",
        true,
    ),
    (
        "auxiliaryCarry",
        true,
    ),
    (
        "zero",
        false,
    ),
    (
        "sign",
        true,
    ),
    (
        "trap",
        false,
    ),
    (
        "interrupt",
        false,
    ),
    (
        "direction",
        false,
    ),
    (
        "overflow",
        false,
    ),
]
